@@ -1,3 +1,12 @@
+2007-07-10  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCompExpr.c:	Added a field for operator precedence
+	to be stored directly in the parse tree.  There's no memory cost to
+	this addition, since that memory would have been lost to alignment
+	issues anyway.  Also, converted precedence definitions and lookup
+	tables to use symbolic constants instead of raw number for improved
+	readability, and continued extending/improving/correcting comments.
+
 2007-07-09  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclCompExpr.c:	Revision so that the END lexeme never
